feat: enforce complex content acknowledgments
